<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_UploadImagem"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/upload_imagem"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_DownloadImagem"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/download_imagem"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_LerDados"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/firestore_ler_dados"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_GravarAlterarLerDados"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/firestore_gravar_alterar_ler_dados"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_Categorias"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/categorias"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_Deslogar"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/deslogar"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_Main_RegistrarEntrada"
                android:layout_width="240dp"
                android:layout_height="70dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/registrar_entrada"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>