<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    tools:context=".RegistroDeSaidaActivity">

    <TextView
        android:id="@+id/textViewTelaDadosProduto"
        style="@style/Label"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="100dp"
        android:text="@string/tv_dados_do_produto"
        android:textSize="30sp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">
    </TextView>

    <TextView
        android:id="@+id/tvLabelFabricante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dados_do_produto_fabricante"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelaDadosProduto">
    </TextView>

    <EditText
        android:id="@+id/edFabricante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelFabricante">
    </EditText>

    <TextView
        android:id="@+id/tvLabelModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/tv_dados_do_produto_modelo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edFabricante">
    </TextView>

    <EditText
        android:id="@+id/edModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelModelo">
    </EditText>

    <TextView
        android:id="@+id/tvLabelCor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_dados_do_produto_cor"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edModelo">
    </TextView>

    <EditText
        android:id="@+id/edCor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCor">
    </EditText>

    <TextView
        android:id="@+id/tvLabelCodigoBarras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/tv_dados_do_produto_imei"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edCor">
    </TextView>

    <EditText
        android:id="@+id/edCodigoBarras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCodigoBarras">
    </EditText>

    <TextView
        android:id="@+id/tvLabelEan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="EAN"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edCodigoBarras">
    </TextView>

    <EditText
        android:id="@+id/edEan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEan">
    </EditText>

    <TextView
        android:id="@+id/tvLabelBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="Box"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edEan">
    </TextView>

    <EditText
        android:id="@+id/edBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelBox">
    </EditText>

    <TextView
        android:id="@+id/tvLabelUnidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="Unidade"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edBox">
    </TextView>

    <EditText
        android:id="@+id/edUnidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelUnidade">
    </EditText>

    <Button
        android:id="@+id/button_entrar"
        style="@style/Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/bt_dados_do_produto_registrar_saida"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/edUnidade"
        app:layout_constraintTop_toBottomOf="@+id/edUnidade">
    </Button>

    <Button
        android:id="@+id/button_cancelar"
        style="@style/Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/bt_dados_do_produto_cancelar"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/edUnidade"
        app:layout_constraintEnd_toEndOf="@id/edUnidade">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
