<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    tools:context=".RegistroDeEntradaActivity">

    <TextView
        android:id="@+id/tvTelaDadosProdutoEntrada"
        style="@style/Label"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="100dp"
        android:text="@string/tv_dados_do_produto"
        android:textSize="30sp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">
    </TextView>

    <TextView
        android:id="@+id/tvLabelFabricanteEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dados_do_produto_fabricante"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTelaDadosProdutoEntrada">
    </TextView>

    <EditText
        android:id="@+id/edFabricanteEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelFabricanteEntrada">
    </EditText>

    <TextView
        android:id="@+id/tvLabelModeloEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/tv_dados_do_produto_modelo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edFabricanteEntrada">
    </TextView>

    <EditText
        android:id="@+id/edModeloEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelModeloEntrada">
    </EditText>

    <TextView
        android:id="@+id/tvLabelCorEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_dados_do_produto_cor"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edModeloEntrada">
    </TextView>

    <EditText
        android:id="@+id/edCorEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCorEntrada">
    </EditText>

    <TextView
        android:id="@+id/tvLabelCodigoBarrasEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/tv_dados_do_produto_imei"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edCorEntrada">
    </TextView>

    <EditText
        android:id="@+id/edCodigoBarrasEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCodigoBarrasEntrada">
    </EditText>

    <TextView
        android:id="@+id/tvLabelEanEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="EAN"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edCodigoBarrasEntrada">
    </TextView>

    <EditText
        android:id="@+id/edEanEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEanEntrada">
    </EditText>

    <TextView
        android:id="@+id/tvLabelBoxEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="Box"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edEanEntrada">
    </TextView>

    <EditText
        android:id="@+id/edBoxEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelBoxEntrada">
    </EditText>

    <TextView
        android:id="@+id/tvLabelUnidadeEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="Unidade"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edBoxEntrada">
    </TextView>

    <EditText
        android:id="@+id/edUnidadeEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelUnidadeEntrada">
    </EditText>

    <Button
        android:id="@+id/button_registrar_entrada"
        style="@style/Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/button_entrar"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/edUnidadeEntrada"
        app:layout_constraintTop_toBottomOf="@+id/edUnidadeEntrada">
    </Button>

    <Button
        android:id="@+id/button_cancela_entrada"
        style="@style/Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/bt_dados_do_produto_cancelar"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/edUnidadeEntrada"
        app:layout_constraintEnd_toEndOf="@id/edUnidadeEntrada">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>